samples/_failures_safe/1761689620_4b1138_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a9b5a71.c: In function ‘main’:
./samples/SAFE/__tmp_6a9b5a71.c:142:5: error: expected expression at end of input
  142 |     if (scanf("%d %d",
      |     ^~
./samples/SAFE/__tmp_6a9b5a71.c:142:5: error: expected declaration or statement at end of input
